# PortWatch

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
docs/: alert-rules.md
examples/: alerts.example.json
src/: app.rs  daemon.rs  events.rs  main.rs  models.rs
src/alerts/: config.rs  evaluator.rs  manager.rs  mod.rs  models.rs  notifier.rs  rule_id.rs  runner.rs
src/backends/: linux.rs  macos.rs  mod.rs  windows.rs
src/ui/: alert_rules.rs  alerts.rs  details.rs  footer.rs  layout.rs  mod.rs  ports_table.rs  theme.rs
