[package]
name = "portscope"
version = "0.1.0"
edition = "2021"
authors = ["PortScope Contributors"]
description = "A cross-platform TUI for monitoring ports and managing processes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/portscope"

[[bin]]
name = "portscope"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
sysinfo = "0.38"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }
