[package]
name = "portwatch"
version = "0.1.0"
edition = "2021"
authors = ["dedsecrattle"]
description = "A cross-platform TUI for monitoring network ports and managing processes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dedsecrattle/PortWatch"
homepage = "https://github.com/dedsecrattle/PortWatch"
documentation = "https://docs.rs/portwatch"
readme = "README.md"
keywords = ["tui", "network", "ports", "monitoring", "process"]
categories = ["command-line-utilities", "network-programming", "os"]
exclude = [".git*", ".windsurf/"]

[[bin]]
name = "portwatch"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
sysinfo = "0.38"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }
