[package]
name = "portwatch"
version = "0.1.5"
edition = "2021"
authors = ["dedsecrattle"]
description = "A cross-platform TUI for monitoring network ports and managing processes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dedsecrattle/PortWatch"
homepage = "https://github.com/dedsecrattle/PortWatch"
documentation = "https://docs.rs/portwatch"
readme = "README.md"
keywords = ["tui", "network", "ports", "monitoring", "process"]
categories = ["command-line-utilities", "network-programming", "os"]
exclude = [".git*", ".windsurf/"]

[[bin]]
name = "portwatch"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
sysinfo = "0.38"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
regex = "1"
dirs = "5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }
